# amr_gui

./: README.md
amr_launch_gui/: CMakeLists.txt  package.xml
amr_launch_gui/include/: central_data.h  central_tab.h  debug_tools.h  device_tab.h  launch_data.h  launch_strip.h  mainwindow.h  server_wrapper.h
amr_launch_gui/src/: central_data.cpp  central_tab.cpp  debug_tools.cpp  device_tab.cpp  launch_data.cpp  launch_strip.cpp  main.cpp  mainwindow.cpp  server_wrapper.cpp  test
amr_launch_gui/ui/: CentralTab.ui  LaunchStrip.ui  LaunchWidget.ui  mainwindow.ui  test.ui  test2.ui
amr_launch_gui/ui/resource/: main_resources.qrc
amr_meshes/: CMakeLists.txt  package.xml
amr_meshes/meshes_amr/amr/: model.dae
amr_meshes/meshes_amr/frame/: amr_frame.blend  model.dae
amr_meshes/meshes_amr/tape/: model.ply
amr_meshes/meshes_amr/tile/: model.ply  model2.ply  untitled.fbx
amrviz/: control_config_puddles.rviz
amrviz/amrviz/: CMakeLists.txt  amrviz.rviz  control_config_central.rviz  control_config_puddles.rviz  package.xml  plugins_description.xml
amrviz/amrviz/config/: layout_config bak.yaml  layout_config.yaml
amrviz/amrviz/include/amrviz/: Apriltag.hpp  CommanderPanel.hpp  DiagnosticOverlayAmr.hpp  Sensors.hpp  Template.hpp
amrviz/amrviz/include/riptide_rviz/: OverlayDisplay.hpp
amrviz/amrviz/launch/: rviz_start.launch.py
amrviz/amrviz/python/: DummyRobotSpoofer.py  MarkerPublisher.py  PosePublisher.py
amrviz/amrviz/src/: Apriltag.cpp  CommanderPanel.cpp  CommanderPanel.ui  DiagnosticOverlayAmr.cpp  OverlayDisplay.cpp  Sensors.cpp  Sensors.ui  Template.cpp  apriltag.ui  commander.ui  robotenable.ui  sensors.ui  template.ui
